--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 </head>
 <body>
    <header>
-    <nav>
-        <div class="logo"> logo</div>
-        <div class="short"> short</div>
-        <div class="blogs"> blogs</div>
+    <nav class="w-11/12 mx-auto flex justify-between border-b-2  py-3">
+        <div class="logo">
+            <img src="./img/Logo.png" alt="">
+        </div>
+        <div class="short"> 
+            <button class="btn">Short bye view</button>
+        </div>
+        <div class="blogs"> 
+            <button class="btn">Blog</button>
+        </div>
     </nav>
    </header>
 
