--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
 </head>
 <body>
    <header>
-    <nav class="w-11/12 mx-auto flex justify-between border-b-2  py-3">
+    <nav class="w-11/12 mx-auto flex justify-between border-b-2 border-[#17171720] py-5">
         <div class="logo">
-            <img src="./img/Logo.png" alt="">
+            <img class="w-[120px]" src="./img/Logo.png" alt="">
         </div>
         <div class="short"> 
             <button class="btn">Short bye view</button>
         </div>
         <div class="blogs"> 
-            <button class="btn">Blog</button>
+            <button class="btn bg-[#FF1F3D] text-white">Blog</button>
         </div>
     </nav>
    </header>
+   <nav id="category-container" class=" flex justify-center gap-5 py-5">
+    <div>
+        <button class="btn btn-sm bg-[#FF1F3D] text-white"> All</button>
+    </div>
+        
+   </nav>
 
-
+<script src="./script/index.js"></script>
 </body>
 </html>
