video api uploaded

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         
    </nav>
 
+   <section class="w-11/12 mx-auto grid grid-cols-1 md:grid-cols-4 gap-4" id="video_container">
+
+   </section>
+
 <script src="./script/index.js"></script>
 </body>
 </html>
