--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    </header>
    <nav id="category-container" class=" flex justify-center gap-5 py-5">
     <div>
-        <button class="btn btn-sm bg-[#FF1F3D] text-white"> All</button>
+        <button onclick="loadVideos()" class="btn btn-sm bg-[#FF1F3D] text-white"> All</button>
     </div>
         
    </nav>
