--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+<style>
+    .active{
+        background-color: red;
+        color: white;
+    }
+</style>
 </head>
 <body>
    <header>
@@ -24,7 +31,7 @@
    </header>
    <nav id="category-container" class=" flex justify-center gap-5 py-5">
     <div>
-        <button onclick="loadVideos()" class="btn btn-sm bg-[#FF1F3D] text-white"> All</button>
+        <button onclick="loadVideos();" class="btn btn-sm "> All</button>
     </div>
         
    </nav>
@@ -63,6 +70,12 @@
         </div>
     </div> -->
 
+    <div class="col-span-full flex flex-col justify-center items-center py-5">
+        <img  class="w-[120px]" src="./img/Icon.png" alt="">
+        <h2 class="text-2xl font-semibold">
+            Oops!! Sorry, There is no content here
+        </h2>
+    </div>
    </section>
 
 <script src="./script/index.js"></script>
