--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    </header>
    <nav id="category-container" class=" flex justify-center gap-5 py-5">
     <div>
-        <button onclick="loadVideos();" class="btn btn-sm "> All</button>
+        <button id="btn-all" onclick="loadVideos();" class="btn btn-sm "> All</button>
     </div>
         
    </nav>
@@ -77,6 +77,25 @@
         </h2>
     </div>
    </section>
+
+   <!-- Open the modal using ID.showModal() method -->
+    <!-- <button class="btn" onclick="my_modal_1.showModal()">open modal</button> -->
+
+    <dialog id="modal_details" class="modal">
+    <div class="modal-box">
+
+        <div id="details_container">
+
+        </div>
+        
+        <div class="modal-action">
+        <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn">Close</button>
+        </form>
+        </div>
+    </div>
+    </dialog>
 
 <script src="./script/index.js"></script>
 </body>
